buildscript {
    repositories {
        mavenCentral()
    }
}


apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'checkstyle'
apply plugin: 'maven-publish'

group = "de.peass"
version = "0.1-SNAPSHOT"

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
    mavenLocal()
    maven{
		url 'https://oss.sonatype.org/content/repositories/snapshots'
	}
}


dependencies {
   implementation group: "de.dagere.kopeme", name: "kopeme-junit4", version: "1.4.4"
   implementation group: "de.dagere.kopeme", name: "kopeme-junit3", version: "1.4.4"
   implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
   implementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.36'
}

test {
//	jvmArgs "-XX:+PrintCompilation" , "-XX:+PrintGC"
//    testLogging.showStandardStreams = true
//    jvmArgs "-Xmx1g"
    // jvmArgs "-agentpath:.../vm_logging/loggingAgent.o"
    // Uncoment this, if you want to measure CPU temperature along with workload duration
  // exclude 'de/precision/**'
}
